--- a/client/tophashtag.html
+++ b/client/tophashtag.html
@@ -127,7 +127,7 @@
         let list = document.querySelectorAll('.navigation li');
         function activeLink() {
             list.forEach((item) => item.classList.remove('hovered'));
-            this.classList.add('hovered');
+            this.classList.add('hovereds');
         }
         list.forEach((item) => item.addEventListener('mouseover', activeLink));
     </script>
