--- a/client/resources/static/html/hottwitter.html
+++ b/client/resources/static/html/hottwitter.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin Analysis</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -29,15 +29,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="coingecko.html">
+                    <a href="sentiment.html">
                         <span class="icon"><ion-icon name="nuclear-outline"></ion-icon></span>
-                        <span class="title">CoinGecko</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="coinmarketcap.html">
-                        <span class="icon"><ion-icon name="tablet-landscape-outline"></ion-icon></span>
-                        <span class="title">CoinMarketCap</span>
+                        <span class="title">Sentiment Analysis</span>
                     </a>
                 </li>
             </ul>
@@ -109,7 +103,7 @@
             <div class="details">
                 <div class="recentOrders">
                     <div class="cardHeader">
-                        <h2>Hot Twitter</h2>
+                        <h2>Recent Twitter</h2>
                         <!-- <a href="#" class="btn">View All</a> -->
                     </div>
                     <table>
