--- a/client/resources/static/html/sentiment.html
+++ b/client/resources/static/html/sentiment.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin Analysis</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/sentiment.css">
 </head>
 <body>
     <div class="container">
@@ -29,15 +30,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="coingecko.html">
+                    <a href="sentiment.html">
                         <span class="icon"><ion-icon name="nuclear-outline"></ion-icon></span>
-                        <span class="title">CoinGecko</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="coinmarketcap.html">
-                        <span class="icon"><ion-icon name="tablet-landscape-outline"></ion-icon></span>
-                        <span class="title">CoinMarketCap</span>
+                        <span class="title">Sentiment Analysis</span>
                     </a>
                 </li>
             </ul>
@@ -67,7 +62,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers">1,504</div>
-                        <div class="cardName">Top like</div>
+                        <div class="cardName">Top tweets</div>
                     </div>
                     <div class="iconBx">
                         <ion-icon name="calculator-outline"></ion-icon>
@@ -77,7 +72,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers">1,504</div>
-                        <div class="cardName">Top retweet</div>    
+                        <div class="cardName">Positives</div>    
                     </div>
                     <div class="iconBx">
                         <ion-icon name="calculator-outline"></ion-icon>
@@ -87,7 +82,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers">1,504</div>
-                        <div class="cardName">Top reply</div>
+                        <div class="cardName">Negatives</div>
                     </div>
                     <div class="iconBx">
                         <ion-icon name="calculator-outline"></ion-icon>
@@ -97,7 +92,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers">1,504</div>
-                        <div class="cardName">Top quote</div>
+                        <div class="cardName">Neutrals</div>
                     </div>
                     <div class="iconBx">
                         <ion-icon name="calculator-outline"></ion-icon>
