--- a/client/resources/static/html/sentiment.html
+++ b/client/resources/static/html/sentiment.html
@@ -100,6 +100,7 @@
                 </div>
             </div>
 
+            <!-- Chart for sentiment -->
         </div>
     </div>
 
@@ -121,7 +122,7 @@
         let list = document.querySelectorAll('.navigation li');
         function activeLink() {
             list.forEach((item) => item.classList.remove('hovered'));
-            this.classList.add('hovered');
+            this.classList.add('hovereds');
         }
         list.forEach((item) => item.addEventListener('mouseover', activeLink));
     </script>
