--- a/client/resources/static/html/tophashtag.html
+++ b/client/resources/static/html/tophashtag.html
@@ -113,10 +113,10 @@
                             <thead>
                                 <tr>
                                     <td>Hashtag</td>
-                                    <td>Like</td>
-                                    <td>Retweet</td>
+                                    <td>Tweets</td>
+                                    <td>Likes</td>
+                                    <td>Retweets</td>
                                     <td>Replies</td>
-                                    <td>Quote</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -146,7 +146,34 @@
                         <!-- Form chart card -->
                         <div class="cardChart">
                             <div class="titleChart">
-                                <h3>#btc</h3>
+                                <h3>Top 10 Tweets</h3>
+                            </div>
+                            <div class="contentChart">
+                                <td><canvas id="route37TrafficChart"></canvas></td>
+                            </div>
+                        </div>  
+
+                        <div class="cardChart">
+                            <div class="titleChart">
+                                <h3>Top 10 Likes</h3>
+                            </div>
+                            <div class="contentChart">
+                                <td><canvas id="route37TrafficChart"></canvas></td>
+                            </div>
+                        </div>  
+
+                        <div class="cardChart">
+                            <div class="titleChart">
+                                <h3>Top 10 Retweets</h3>
+                            </div>
+                            <div class="contentChart">
+                                <td><canvas id="route37TrafficChart"></canvas></td>
+                            </div>
+                        </div>  
+
+                        <div class="cardChart">
+                            <div class="titleChart">
+                                <h3>Top 10 Replies</h3>
                             </div>
                             <div class="contentChart">
                                 <td><canvas id="route37TrafficChart"></canvas></td>
@@ -171,14 +198,6 @@
             navigation.classList.toggle('active');
             main.classList.toggle('active');
         }
-
-        // add hovered class in selected list item
-        let list = document.querySelectorAll('.navigation li');
-        function activeLink() {
-            list.forEach((item) => item.classList.remove('hovered'));
-            this.classList.add('hovereds');
-        }
-        list.forEach((item) => item.addEventListener('mouseover', activeLink));
     </script>
 
 </body>
